subdir('nettle')
system_ss.add(files('reg_interface.c'))
system_ss.add(when: 'CONFIG_VST_TEST_DEVICE', if_true: files('test_device/test_device.c'))
system_ss.add(when: 'CONFIG_VST_TEST_DEVICE',if_true: files('test_device/test_gpio.c'))
system_ss.add(when: 'CONFIG_VST_SHA3', if_true: files('sha3/sha3.c'))